Added more readable notation for index.html.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
 <head>
   <!-- Theme Made By www.w3schools.com - No Copyright -->
+  
+  <!--||||Contributors and Edits: Remmington Damper and Clarence Tooles||||-->
+  
+  <!-- Mark: Import Statements -->
   <title>Bootstrap Theme Company Page</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,6 +15,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <style>
+  
+  <!-- Mark: Body Styling -->
   body {
       font: 400 15px Lato, sans-serif;
       line-height: 1.8;
@@ -192,6 +198,7 @@
 </head>
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
 
+<!-- Mark: Document Classes -->
 <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container">
     <div class="navbar-header">
@@ -459,6 +466,7 @@
 <!-- Add Google Maps -->
 <div id="googleMap" style="height:400px;width:100%;"></div>
 <script>
+<!-- Mark: Google Map API use -->
 function myMap() {
 var myCenter = new google.maps.LatLng(41.878114, -87.629798);
 var mapProp = {center:myCenter, zoom:12, scrollwheel:false, draggable:false, mapTypeId:google.maps.MapTypeId.ROADMAP};
@@ -480,6 +488,7 @@ Read more at: https://www.w3schools.com/graphics/google_maps_basic.asp
   <p>Bootstrap Theme Made By <a href="https://www.w3schools.com" title="Visit w3schools">www.w3schools.com</a></p>
 </footer>
 
+<!-- Mark: Page Behavior -->
 <script>
 $(document).ready(function(){
   // Add smooth scrolling to all links in navbar + footer link
